# WellMini

./: .gitignore  CMakeLists.txt  README.md
include/: ActivityChart.h  ActivityMonitor.h  Dashoard.h  Login.h  MainWindow.h  ReminderDialog.h  TrayManager.h
resources/: resources.qrc
src/: ActivityChart.cpp  ActivityMonitor.cpp  Dashoard.cpp  Login.cpp  Main.cpp  MainWindow.cpp  ReminderDialog.cpp  TrayManager.cpp
ui/: Dashboard.ui  Login.ui  ReminderDialog.ui
